Improve CI performance
- Run Docker building async via Turborepo. This removes the concept of a base image, because that was greatly slowing down performance. GitHub Actions does not have a good way to share a previously built image across parallel steps.
- Improved the caching and layers in the Dockerfiles.
- Add a Turborepo cache. We can eventually add this to the Docker builds.
- Update dependencies

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,8 @@
 !.npmrc
 !package.json
 !package-lock.json
+!.prettierignore
+!prettier.config.cjs
 !turbo.json
 
 !apps
@@ -10,19 +12,20 @@
 apps/*/**
 packages/*/**
 
-!apps/**/app
-!apps/**/migrations
-!apps/**/public
-!apps/**/server
-!apps/**/src
-!apps/**/test
-!apps/**/tests
-!apps/**/*.cjs
-!apps/**/*.js
-!apps/**/*.json
-!apps/**/*.ts
+!apps/*/app
+!apps/*/migrations
+!apps/*/scripts
+!apps/*/server
+!apps/*/src
+!apps/*/start.sh
+!apps/*/test
+!apps/*/tests
+!apps/*/*.cjs
+!apps/*/*.js
+!apps/*/*.json
+!apps/*/*.ts
 
-!packages/**/src
-!packages/**/*.js
-!packages/**/*.json
-!packages/**/*.ts
+!packages/*/src
+!packages/*/*.js
+!packages/*/*.json
+!packages/*/*.ts
