--- a/apps/frontend/.ci/Dockerfile
+++ b/apps/frontend/.ci/Dockerfile
@@ -37,6 +37,14 @@ RUN npm install --global turbo
 
 ARG APP
 
+ARG TURBO_API
+ARG TURBO_TEAM
+ARG TURBO_TOKEN
+
+ENV TURBO_API=$TURBO_API
+ENV TURBO_TEAM=$TURBO_TEAM
+ENV TURBO_TOKEN=$TURBO_TOKEN
+
 COPY --from=prune /app/out/json/ .
 
 RUN npm ci --loglevel=warn
