Improve CI performance
- Attempt to use locally running Turbo cache from within Docker builds.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,8 @@
 *
+# These are global turbo dependencies, so we want to include them to access caching.
+!.github/docker/config.sh
+!.github/workflows/main.yaml
+
 !.changeset
 !.npmrc
 !package.json
