--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,13 +25,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'npm'
+          cache: npm
 
       - name: 💿 Restore cached node_modules
         uses: actions/cache@v4
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
 
       - name: 🏎️ Cache for Turborepo
         uses: rharkor/caching-for-turbo@v1.5
@@ -39,17 +39,7 @@ jobs:
       - name: 📦 Install dependencies
         run: npm install
 
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-
-      - name: Find Docker host IP
-        run: |
-          ip=$(docker run --rm alpine /bin/sh -c "apk update > /dev/null && apk add iproute2 > /dev/null && ip -4 route show default | cut -d' ' -f3")
-          echo "DOCKER_HOST_IP=${ip}" >> $GITHUB_ENV
-
-      - name: 🛠️ Build
+      - name: ✅ Validate
         run: npm run ci:github
 
       - name: 🐳 Build Docker images
