--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,49 +3,62 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
-  "dockerfileType": "node",
+  "engines": {
+    "node": "22.12.0",
+    "npm": ">=10"
+  },
   "scripts": {
-    "build": "npm run build:remix && npm run build:server",
-    "build:remix": "remix vite:build",
-    "build:server": "tsc --project ./tsconfig.server.json",
+    "build": "NODE_ENV=production run-s build:*",
+    "build:react-router": "react-router build",
+    "build:server": "tsx scripts/build-server.ts",
+    "ci": "run-p lint typecheck build",
     "clean": "rm -rf build",
-    "dev": "tsx watch --clear-screen=false --enable-source-maps --ignore \".cache/**\" --ignore \"app/**\" --ignore \"vite.config.ts.timestamp-*\" --ignore \"build/**\" --ignore \"node_modules/**\" server/main.ts",
+    "dev": "npm run dev:base -- server/main.ts",
+    "dev:base": "NODE_ENV=development tsx watch --env-file=.env --clear-screen=false --ignore \".cache/**\" --ignore \"app/**\" --ignore \"vite.config.ts.timestamp-*\" --ignore \"build/**\" --ignore \"node_modules/**\"",
+    "dev:debug": "npm run dev:base -- --inspect server/main.ts",
+    "dev:trace": "npm run dev:base -- --require=./server/opentelemetry.cjs server/main.ts",
     "docker:build": "cd ../.. && apps/frontend/.ci/docker-build.sh",
     "docker:run": "cd ../.. && apps/frontend/.ci/docker-run.sh",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "NODE_ENV=production node --enable-source-maps ./build/main.js",
-    "typecheck": "tsc -b"
+    "start": "NODE_ENV=production node --enable-source-maps --env-file=.env --require=./server-build/opentelemetry.cjs ./server-build/main.js",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@emotion/cache": "11.13.5",
-    "@emotion/react": "11.13.5",
-    "@emotion/styled": "11.13.5",
-    "@mcansh/remix-fastify": "4.0.3",
-    "@mui/icons-material": "6.1.9",
-    "@mui/material": "6.1.9",
-    "@remix-run/node": "2.15.0",
-    "@remix-run/react": "2.15.0",
-    "@remix-run/serve": "2.15.0",
-    "fastify": "5.1.0",
-    "fastify-graceful-shutdown": "4.0.1",
-    "isbot": "5.1.17",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "0.55.1",
+    "@opentelemetry/sdk-node": "0.57.0",
+    "@react-router/express": "^7.1.1",
+    "@react-router/node": "^7.1.1",
+    "@react-router/serve": "^7.1.1",
+    "@wesp-up/express": "3.0.1",
+    "express": "4.21.2",
+    "isbot": "5.1.20",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "^7.1.1",
+    "source-map-support": "0.5.21",
+    "zod": "3.24.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.15.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@react-router/dev": "^7.1.1",
+    "@types/fs-extra": "11.0.4",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
+    "@types/source-map-support": "0.5.10",
     "@wesp-up/eslint-config": "2.1.0",
     "@wesp-up/eslint-config-react": "2.1.0",
     "autoprefixer": "10.4.20",
-    "eslint": "9.15.0",
+    "eslint": "9.17.0",
+    "fs-extra": "11.2.0",
+    "glob": "11.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.49",
-    "tailwindcss": "3.4.15",
+    "tailwindcss": "3.4.17",
     "typescript": "5.7.2",
-    "vite": "6.0.1",
-    "vite-tsconfig-paths": "5.1.3"
+    "vite": "6.0.7",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
