--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -44,16 +44,21 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.1",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
     "@types/fs-extra": "11.0.4",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
     "@types/source-map-support": "0.5.10",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/coverage-v8": "2.1.8",
     "@wesp-up/eslint-config": "2.1.0",
     "@wesp-up/eslint-config-react": "2.1.0",
     "autoprefixer": "10.4.20",
     "eslint": "9.17.0",
     "fs-extra": "11.2.0",
     "glob": "11.0.0",
+    "jsdom": "25.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.49",
     "tailwindcss": "3.4.17",
