--- a/apps/database-migrator/package.json
+++ b/apps/database-migrator/package.json
@@ -21,12 +21,13 @@
     "@repo/db-schema": "*",
     "drizzle-kit": "0.28.1",
     "drizzle-orm": "0.36.4",
-    "postgres": "3.4.5"
+    "postgres": "3.4.5",
+    "zod": "3.24.1"
   },
   "devDependencies": {
+    "@types/node": "22.10.0",
     "@wesp-up/eslint-config": "2.1.0",
     "@wesp-up/tsconfig": "2.0.0",
-    "@types/node": "22.10.0",
     "eslint": "9.15.0",
     "typescript": "5.7.2"
   }
